# tdev2

./: README.md  pyproject.toml
.github/workflows/: build-conda-recipe.yaml  pipy-publish.yaml
conda-recipe/: meta.yaml
tde/: __init__.py
